# yall

./: CMakeLists.txt  README.md  build_notes.txt  test.cpp  yall.pc.in
include/YALL/: Models.hpp  Plot.hpp  Utils.hpp
include/YALL/Algorithms/: PCA.hpp
include/YALL/Models/: LinearRegression.hpp  LogisticRegression.hpp  MultipleRegression.hpp  NeuralNet.hpp
include/YALL/Models/NeuralNet/: Activation.hpp  BackPropagation.hpp  GradientDescent.hpp  Layer.hpp  LinearActivation.hpp  NNParameters.hpp  NeuralNet.hpp  Optimizer.hpp  SigmoidActivation.hpp
include/YALL/Plot/: Plot.hpp  PlotParams.hpp
include/YALL/Utils/: DataTable.hpp  Statistics.hpp  StringUtils.hpp
src/YALL/: notes.txt
src/YALL/Models/: .MultipleRegression.cc.swp  Layer.cc  LinearRegression.cc  LogisticRegression.cc  MultipleRegression.cc  NeuralNet.cc
src/YALL/Plot/: Plot.cc
src/YALL/Utils/: DataTable.cc  Statistics.cc  StringUtils.cc
test/: .NeuralNetTest.cpp.swp  DataTableTest.cpp  LinearRegression.cpp  Makefile  MultipleRegressionTest.cpp  NeuralNetTest.cpp  SigmoidActivation.hpp  armadillo_test  armadillo_test.cpp  dt  iris.data  linreg  mr  multiple_regression.csv  nn  objectslicing.cpp  same_but_dots.csv  statistics_test.cpp  stats
test/pycomp/: ann.py  iris_comp.py
utils/: find_todo.py
